--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,7 +1,22 @@
-a{
+*,
+**,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  color: #1F1E1E;
+}
+a {
   color: inherit;
   text-decoration: none;
 }
-li{
+li {
   list-style: none;
 }
