--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,3 +279,98 @@
     }
   }
 }
+.footer {
+  background-color: #1f1e1e;
+  color: #fff;
+  padding: 80px 0;
+  img {
+    display: block;
+    margin: 0 auto 80px;
+  }
+  &__inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 120px;
+    padding: 0 100px;
+  }
+  &__item {
+    // margin: 0 60px;
+  }
+  &__title {
+    font-weight: 500;
+    font-size: 14px;
+  }
+  &__text {
+    font-size: 14px;
+    font-weight: 400;
+  }
+}
+.application {
+  background-color: #EAEAEA;
+  padding: 75px 0;
+  &__title {
+    text-align: center;
+    margin-bottom: 43px;
+  }
+  form {
+    max-width: 832px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    textarea {
+    }
+    input {
+      max-width: 256px;
+      max-height: 44px;
+      border: 1px solid #c4c4c4;
+      padding: 11px 14px 12px;
+      margin-bottom: 28px;
+      font-size: 18px;
+      &::placeholder {
+        font-size: 16px;
+        color: #c4c4c4;
+        font-family: "Roboto", sans-serif;
+      }
+    }
+    textarea {
+      width: 100%;
+      border: 1px solid #c4c4c4;
+      padding: 11px 14px 12px;
+      margin-bottom: 28px;
+      font-size: 18px;
+      resize: none;
+      margin-bottom: 67px;
+      &::placeholder {
+        font-size: 16px;
+        color: #c4c4c4;
+        font-family: "Roboto", sans-serif;
+      }
+    }
+    button {
+      border: none;
+    }
+    label {
+      font-size: 16px;
+      text-decoration-line: underline;
+      padding-left: 46px;
+      position: relative;
+      input{
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        clip: rect(0 0 0 0);
+      }
+      span{
+        width: 26px;
+        height: 26px;
+        border: 2px solid #c4c4c4;
+        border-radius: 2px;
+        position: absolute;
+        margin-left: -45px;
+      }
+    }
+  }
+}
