--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -50,6 +50,9 @@ h2 {
   display: inline-block;
   cursor: pointer;
 }
+.menu-btn{
+  display: none;
+}
 .arrow-btn {
   display: block;
   width: 40px;
